BUG#3963

ndb/src/kernel/blocks/dbtc/Dbtc.hpp:
  let sendTCKEY_FAILCONF reset marker
ndb/src/kernel/blocks/dbtc/DbtcMain.cpp:
  1) let sendTCKEY_FAILCONF reset marker
  2) Restart marker scan on NF
  3) Don't send TCKEY_FAILCONF to 0
ndb/src/mgmapi/mgmapi.cpp:
  More info from mgmapi
ndb/test/run-test/daily-basic-tests.txt:
  drop tables to fix -n MassiveRollback
ndb/test/run-test/main.cpp:
  More error messages (and retries) on error